2021-07-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* regex/regex_internal.h: sync with pdftexdir/regex 2017-02-16.

2017-03-27  Karl Berry  <karl@freefriends.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.

2016-09-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import ChkTeX 1.7.6.
	* version.ac: adapted.
	* ChkTeX.tex, ChkTeX.pdf: updated.

2016-02-23  Akira Kakuto  <kakuto@kakuto.fuk.kindai.ac.jp>

	* Makefile.am, configure.ac: New convention.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-04-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ChkTeX.tex (new): Source of ChkTeX.pdf.
	* Makefile.am, configure.ac: Rules to build ChkTeX.pdf.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ChkTeX.pdf (new): Moved from chktex-1.7.2/ChkTeX.pdf to here.
	(No longer distributed).

2015-04-12  Karl Berry  <karl@tug.org>

	* Import chktex-1.7.4.

2015-03-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop check for strtol.

2015-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use the fragment ../../am/dist_hook.am.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* regex/regcomp.c [WIN64]: Use __int64 (not long) as intptr_t.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Moved Makefile fragments to ../../am/.

2013-05-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import chktex-1.7.2.
	version.ac, chktex.test: Adapted.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (configdir, pdfdocdir, scriptsdir):
	Change texmf => texmf-dist.

2013-01-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Allow subdir-objects.

2012-10-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.
	(TESTS_ENVIRONMENT): Add TEXMFCNF.
