@@ -1,5 +1,14 @@
 2021-07-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
+	* regex/regexec.c: Avoid MSVC compiler error.
+	-> error C2059: syntax error: ':'
+	MSVC does not allow empty expression for ternary
+	conditional operator (?:) which is a GNU C extension.
+	https://gcc.gnu.org/onlinedocs/gcc/Conditionals.html
+	https://stackoverflow.com/questions/3319075/
+
+2021-07-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
 	* regex/regex_internal.h: sync with pdftexdir/regex 2017-02-16.
 
 2017-03-27  Karl Berry  <karl@freefriends.org>
